buildscript {
    ext {
        springBootVersion = '3.4.3'
        openapiVersion = '2.8.6'
        lombokVersion = '1.18.30'
        junitBomVersion = '5.10.0'
        liquibaseVersion = '4.15.0'
        testContainersVersion = '1.20.4'
        testContainersPostgreVersion = '1.19.6'
        jakartaValidationVersion = '3.0.2'
        // plugins
        springDependenciesPluginVersion = '1.0.11.RELEASE'
        liquibasePluginVersion = '2.0.4'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath("io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE")
    }
}

plugins {
    id 'io.spring.dependency-management' version '1.0.11.RELEASE' apply false
    id 'org.springframework.boot' version '3.4.3' apply false
    id 'org.liquibase.gradle' version '2.0.4' apply false
}

allprojects {
    group = 'yurykorzun.art'
    version = '0.0.1-SNAPSHOT'
    repositories {
        mavenCentral()
        // add Spring repositories for milestones and new versions
        maven { url 'https://repo.spring.io/milestone' }
        maven { url 'https://repo.spring.io/snapshot' }
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'jacoco'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    dependencies {
        compileOnly "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
        
        // Jakarta Validation
        implementation "jakarta.validation:jakarta.validation-api:${jakartaValidationVersion}"

        // tests
        testImplementation platform("org.junit:junit-bom:${junitBomVersion}")
        testImplementation "org.junit.jupiter:junit-jupiter"
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testImplementation "org.testcontainers:testcontainers:${testContainersVersion}"
        testImplementation "org.testcontainers:junit-jupiter:${testContainersVersion}"
        testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
        testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    }

    tasks.matching { it.name in ['jar', 'bootJar'] }.configureEach {
        enabled = false
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform {
            if (project.hasProperty("excludeIntegrationTests")) {
                excludeTags 'integration'
            }
        }
    }

    tasks.register('integrationTest', Test) {
        description = "Runs integration tests"
        group = "verification"

        useJUnitPlatform {
            includeTags 'integration'
        }

        shouldRunAfter test
    }

    jacocoTestReport {
        dependsOn test // tests are required to run before generating the jacoco report
    }

    test {
        finalizedBy jacocoTestReport  // report is always generated after tests run
    }
}
